RESOLVED FIXED251612
ASSERTION FAILED: !m_listeners.contains(connection) || m_listeners.get(connection) == identifier in StorageAreaBase
https://bugs.webkit.org/show_bug.cgi?id=251612
Summary ASSERTION FAILED: !m_listeners.contains(connection) || m_listeners.get(connec...
Sihui Liu
Reported 2023-02-02 10:36:39 PST
...
Attachments
Sihui Liu
Comment 1 2023-02-02 10:36:55 PST
Sihui Liu
Comment 2 2023-02-02 11:25:26 PST
EWS
Comment 3 2023-02-05 19:34:29 PST
Committed 259876@main (dcf41af3936b): <https://commits.webkit.org/259876@main> Reviewed commits have been landed. Closing PR #9545 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.